packages/server/test/support/fixtures/server/expected_stdout_bundle_failures.txt
====================================================================================================

  (Run Starting)
Oops...we found an error preparing this test file:

  /foo/bar/.projects/e2e/cypress/integration/stdout_exit_early_failing_spec.coffee

The error was:

/foo/bar/.projects/e2e/cypress/integration/stdout_exit_early_failing_spec.coffee:1
+>
 ^
ParseError: unexpected >
    (No stack trace)


This occurred while Cypress was compiling and bundling your test code. This is usually caused by:

- A missing file or dependency
- A syntax error in the file or one of its dependencies

Fix the error in your code and re-run your tests.

  (Results)

  - Tests:           0
  - Passes:          0
  - Failures:        1
  - Pending:         0
  - Duration:        10 seconds
  - Screenshots:     0
  - Video Recorded:  true
  - Cypress Version: 1.2.3


  (Video)

  - Started compressing:   Compressing to 32 CRF
  - Finished compressing:  /foo/bar/.projects/e2e/cypress/videos/abc123.mp4 (X seconds)


  (Run Finished)
